# aws-crt-rust

./: .gitmodules  Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: cargo-fmt.yml  cargo-test.yml
crates/aws-c-cal-sys/: Cargo.toml  wrapper.h
crates/aws-c-cal-sys/src/: bindings.rs  build.rs
crates/aws-c-common-sys/: Cargo.toml  wrapper.h
crates/aws-c-common-sys/src/: bindings.rs  build.rs
crates/aws-c-compression-sys/: Cargo.toml  wrapper.h
crates/aws-c-compression-sys/src/: bindings.rs  build.rs
crates/aws-c-io-sys/: Cargo.toml  wrapper.h
crates/aws-c-io-sys/src/: bindings.rs  build.rs
crates/aws-lc-sys/: Cargo.toml  wrapper.h
crates/aws-lc-sys/src/: bindings.rs  build.rs
crates/build_util/: Cargo.toml
crates/build_util/src/: lib.rs
